# vge

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  build.rs  cmfd.sh
.github/workflows/: ci.yml
asm/x86_64/: vge.s  vge_aa.s  vge_extra.s
c/: vge_portable.c
docs/: API.md  auto-pages.md  auto-sensors.md  capture-20260722-061858.md  drive-day.md  hardware-bezel.md  hardware.md  vehicle.md  warnings.md  widgets.md
docs/hardware/: cmfd-connector-icd.md  cmfd-flash.md  cmfd-industrial-design.md  cmfd-platform-requirements.md  cmfd-power.md
docs/odbii-session/: frames.ndjson  meta.toml  session.json  signals.csv  vehicle.yaml
docs/reference/: cmfd-design-review-20260722.md  cmfd-power-on.md  dcs-f16-mfd-notes.md  f16-mfd-catalog.md  ford-f150-uds-readonly.md  mlu-m1-cmfd.md  mlu-m1-visual-ocr.md  vehicle-cmfd-design.md
docs/reference/ford-f150-forscan/: 00_Common.csv  01_APIM-Old2.csv  02_ABS_2015-2017.csv  02_ACM_2018plus.csv  03_ABS_2018-2019.csv  04_ACM_2015-17.csv  04_ACM_2018-20.csv  05_ACM_2015-17.csv  06_BCM_JU5T.csv  07_APIM_Sync_1.csv  08_APIM_Sync_2.csv  09_APIM_Sync_3.csv  09_Country_Codes.csv  10_DDMPDM.csv  10_DSM.csv  12_APIM_Sync_3_-_2-27-22.csv  13_BCM_BdyCM_-old.csv  16_DSP_2018.csv  17_FCDIM.csv  17_IPC_Newer.csv  18_FCIM.csv  19_HSWM.csv  19_IPMB.csv  20_IPMA_2015-20.csv  20_PAM_2015-20.csv  21_Power_Point_Timeout.csv  22_IPC.csv  23_HSWM_-_Old.csv  25_APIM-old.csv  25_SCME.csv  26_IPC-old2.csv  26_SCMGSCMH.csv  27_IPMA_2015-17_-_old.csv  28_TCU_2018plus.csv  29_IPMB-old.csv  29_TCU_K_2019.csv  30_IPC-old.csv  30_TRM.csv  31_APIM-Backup.csv  32_PAM-old.csv  (+18 more)
examples/: bench.rs  bench_now.rs  layout_probe.rs  profile_present.rs
examples/c/: smoke.c
hardware/: ORDER-THIS.md  README.md
hardware/bom/: README.md  bom-master.csv
hardware/elec/: schematic-blocks.md
hardware/elec/bezel-mcu/: README.md  cmfd-board-a-pinmap.md  cmfd-board-a.kicad_pcb  cmfd-board-a.kicad_prl  cmfd-board-a.kicad_pro
hardware/elec/carrier-som/: README.md  cmfd-board-b.kicad_pcb  cmfd-board-b.kicad_prl  cmfd-board-b.kicad_pro
hardware/elec/fab/: SEND-TO-FAB.md  kicad-drc-board-a.json  kicad-drc-board-a.rpt  kicad-drc-board-b.json  kicad-drc-board-b.rpt
hardware/elec/fab/board-a-bezel/: README.txt  board-a-pos.csv  bom.csv  cmfd-board-a-B_Cu.gbr  cmfd-board-a-B_Mask.gbr  cmfd-board-a-B_Paste.gbr  cmfd-board-a-B_Silkscreen.gbr  cmfd-board-a-Edge_Cuts.gbr  cmfd-board-a-F_Cu.gbr  cmfd-board-a-F_Mask.gbr  cmfd-board-a-F_Paste.gbr  cmfd-board-a-F_Silkscreen.gbr  (+2 more)
hardware/mech/print/: README.md  cmfd-battery-tray.stl  cmfd-corner-bumper.stl  cmfd-front-bezel.stl  cmfd-osb-cap.stl  cmfd-rear-shell.stl  cmfd-rocker.stl
hardware/mech/src/: cmfd_enclosure.scad
hardware/studio/: README.md
hardware/tools/: blender_render_cmfd.py  export_stls.sh  gen_pcbs.py  kicad_build.py  kicad_export.sh
hardware/viewer/: index.html  shots.html
include/: vge.h
site/: index.html
site/hardware/: cmfd-layout.js  index.html
src/: bezel.rs  effects.rs  fb.rs  font.rs  font_atlas_data.rs  frame.rs  lib.rs  palette.rs  stroke.rs  surface.rs  term.rs
src/audio/: mod.rs
src/auto/: boot.rs  caps.rs  channels.rs  format_select.rs  mod.rs  obd_feed.rs  probe.rs  vehicle_profile.rs
src/jet/: mod.rs
src/obd/: capture.rs  elm.rs  error.rs  feed.rs  ford.rs  isotp.rs  j1979.rs  mod.rs  replay.rs  session.rs  transport.rs  uds.rs
src/video/: frame.rs  mod.rs  v4l2.rs
src/warn/: mod.rs
src/widget/: alert.rs  attitude.rs  extra.rs  mod.rs  range_sensor.rs  round_gauge.rs  status.rs  tape.rs  topo.rs
(+14 files in other folders)
