[package]
name = "mfd"
version = "0.1.0-dev.1"
edition = "2021"
license = "MIT"
description = "MFD — multi-function display library for aviation instrument pages and automotive reuse"
repository = "https://github.com/theesfeld/mfd"
homepage = "https://theesfeld.github.io/mfd/"
authors = ["theesfeld"]
rust-version = "1.74"
readme = "README.md"
keywords = ["mfd", "avionics", "instrument", "gauge", "cockpit"]
categories = ["graphics", "rendering", "gui"]
include = [
    "src/**/*",
    "asm/**/*",
    "include/**/*",
    "assets/fonts/**/*",
    "build.rs",
    "LICENSE",
    "NOTICE",
    "README.md",
    "CHANGELOG.md",
]

[lib]
name = "mfd"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bin]]
name = "cmfd"
path = "src/bin/cmfd.rs"

# Legacy alias — same glass binary (prefer `cmfd` / `./cmfd.sh`).
[[bin]]
name = "mfd-demo"
path = "src/bin/cmfd.rs"

[[bin]]
name = "mfd-obd-capture"
path = "src/bin/mfd-obd-capture.rs"
required-features = ["obd"]

[[bin]]
name = "bake-font-atlas"
path = "src/bin/bake-font-atlas.rs"
required-features = ["bake_font"]

[features]
default = ["obd"]
## Host-only: regenerate `src/font_atlas_data.rs` from B612 TTF.
bake_font = ["dep:fontdue"]
## Native OBD-II / UDS (ELM + Bluetooth SPP + capture). No obdtui.
obd = ["dep:serialport", "dep:serde", "dep:serde_json"]

[dependencies]
libc = "0.2"
fontdue = { version = "0.9", optional = true }
serialport = { version = "4", optional = true, default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }

[build-dependencies]
cc = "1"
